@@ -1,9 +1,11 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.util.mergerule;
 
 import java.io.StringReader;
 import java.util.*;
 import java.util.stream.Collectors;
-import javax.annotation.Nonnull;
 
 import de.uka.ilkd.key.axiom_abstraction.predicateabstraction.AbstractionPredicate;
 import de.uka.ilkd.key.java.*;
@@ -34,6 +36,7 @@ import de.uka.ilkd.key.util.Triple;
 
 import org.key_project.util.collection.*;
 
+import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -135,7 +138,7 @@ public class MergeRuleUtils {
      */
     public static Term translateToFormula(final Services services, final String toTranslate) {
         try {
-            @Nonnull
+            @NonNull
             Term result = new KeyIO(services).parseExpression(toTranslate);
             return result.sort() == Sort.FORMULA ? result : null;
         } catch (Throwable e) {
@@ -482,10 +485,8 @@ public class MergeRuleUtils {
             HashMap<Function, LogicVariable> replMap, Services services) {
         TermBuilder tb = services.getTermBuilder();
 
-        if (term.op() instanceof Function && ((Function) term.op()).isSkolemConstant()
+        if (term.op() instanceof Function constant && ((Function) term.op()).isSkolemConstant()
                 && (restrictTo == null || restrictTo.contains(term.op()))) {
-
-            Function constant = (Function) term.op();
 
             if (!replMap.containsKey(constant)) {
                 LogicVariable freshVariable = getFreshVariableForPrefix(
@@ -758,7 +759,6 @@ public class MergeRuleUtils {
      *         successful.
      *
      * @see #simplify(Proof, Term, int)
-     * @see SymbolicExecutionUtil#simplify(Proof, Term)
      */
     public static Term trySimplify(final Proof parentProof, final Term term,
             boolean countDisjunctions, int timeout) {
@@ -805,7 +805,7 @@ public class MergeRuleUtils {
      *
      * @param se1 First element to check equality (mod renaming) for.
      * @param se2 Second element to check equality (mod renaming) for.
-     * @param goal The goal of the current branch (for getting branch-unique names).
+     * @param node The node of the current branch (for getting branch-unique names).
      * @param services The Services object.
      * @return true iff source elements can be matched, considering branch-unique location names.
      */
@@ -859,7 +859,7 @@ public class MergeRuleUtils {
      * @param cond1 First path condition to merge.
      * @param cond2 Second path condition to merge.
      * @param services The services object.
-     * @param timeout Time in milliseconds after which the side proof is aborted.
+     * @param simplificationTimeout Time in milliseconds after which the side proof is aborted.
      * @return A path condition that is equivalent to the disjunction of the two supplied formulae,
      *         but possibly simpler.
      */
@@ -943,7 +943,7 @@ public class MergeRuleUtils {
         for (final Term t : cond1SpecificElems) {
             List<Term> distCandidates = cond2SpecificElems.stream()
                     .filter(t1 -> t1.equals(tb.not(t)) || t.equals(tb.not(t1)))
-                    .collect(Collectors.toList());
+                    .toList();
             if (!distCandidates.isEmpty()) {
                 // Just take the first, any one should be good enough, at least
                 // with the present knowledge
@@ -1010,11 +1010,11 @@ public class MergeRuleUtils {
      * correspondents in order to enable merging of different branches declaring local variables.
      * <p>
      *
-     * @param goal Current goal.
+     * @param node Current node.
      * @param pio Position of update-program counter formula in goal.
      * @param services The services object.
      * @return An SE state (U,C).
-     * @see #sequentToSETriple(Goal, PosInOccurrence, Services)
+     * @see #sequentToSETriple(Node, PosInOccurrence, Services)
      */
     public static SymbolicExecutionState sequentToSEPair(Node node, PosInOccurrence pio,
             Services services) {
@@ -1038,7 +1038,7 @@ public class MergeRuleUtils {
      * not effected by the switch to branch-unique names. However, merged nodes are then of course
      * potentially different from their predecessors concerning the involved local variable symbols.
      *
-     * @param goal Current goal.
+     * @param node Current node.
      * @param pio Position of update-program counter formula in goal.
      * @param services The services object.
      * @return An SE state (U,C,p).
@@ -1117,7 +1117,7 @@ public class MergeRuleUtils {
 
         // This goal
         final Collection<Operator> thisGoalSymbols = new ArrayList<>();
-        final Goal thisGoal = proof.getGoal(mergeState.getCorrespondingNode());
+        final Goal thisGoal = proof.getOpenGoal(mergeState.getCorrespondingNode());
         final NamespaceSet thisGoalNamespaces = thisGoal.getLocalNamespaces();
         thisGoalSymbols.addAll(thisGoalNamespaces.programVariables().allElements());
         thisGoalSymbols.addAll(thisGoalNamespaces.functions().allElements());
@@ -1126,7 +1126,7 @@ public class MergeRuleUtils {
 
         // Partner goal
         final Collection<Operator> partnerGoalSymbols = new ArrayList<>();
-        final Goal partnerGoal = proof.getGoal(mergePartnerState.getCorrespondingNode());
+        final Goal partnerGoal = proof.getOpenGoal(mergePartnerState.getCorrespondingNode());
         final NamespaceSet partnerGoalNamespaces = partnerGoal.getLocalNamespaces();
         partnerGoalSymbols.addAll(partnerGoalNamespaces.programVariables().allElements());
         partnerGoalSymbols.addAll(partnerGoalNamespaces.functions().allElements());
@@ -1141,14 +1141,14 @@ public class MergeRuleUtils {
 
             final List<Operator> problematicOps =
                 partnerGoalSymbols.parallelStream().filter(pv -> thisGoalNames.contains(pv.name()))
-                        .filter(pv -> !thisGoalSymbols.contains(pv)).collect(Collectors.toList());
+                        .filter(pv -> !thisGoalSymbols.contains(pv)).toList();
 
             // Loop over all problematic operators and rename them in the
             // partner state.
             for (Operator partnerStateOp : problematicOps) {
                 final Operator mergeStateOp = thisGoalSymbols.parallelStream()
                         .filter(s -> s.name().equals(partnerStateOp.name()))
-                        .collect(Collectors.toList()).get(0);
+                        .toList().get(0);
 
                 Operator newOp1;
                 Operator newOp2;
@@ -1536,7 +1536,7 @@ public class MergeRuleUtils {
 
     /**
      * Simplifies the given {@link Term} in a side proof with splits. This code has been copied from
-     * {@link SymbolicExecutionUtil} and only been slightly modified (to allow for splitting the
+     * {@code SymbolicExecutionUtil} and only been slightly modified (to allow for splitting the
      * proof).
      *
      * @param parentProof The parent {@link Proof}.
@@ -1545,7 +1545,6 @@ public class MergeRuleUtils {
      * @return The simplified {@link Term}.
      * @throws ProofInputException Occurred Exception.
      *
-     * @see SymbolicExecutionUtil#simplify(Proof, Term)
      */
     private static Term simplify(Proof parentProof, Term term, int timeout)
             throws ProofInputException {
@@ -1600,10 +1599,13 @@ public class MergeRuleUtils {
 
     /**
      * Tells whether a name is unique in the passed list of global variables.
+     * <p>
+     * (see also {@code VariableNamer.isUniqueInGlobals(String, Iterable)})
+     * </p>
      *
      * @param name The name to check uniqueness for.
      * @param globals The global variables for the givan branch.
-     * @see VariableNamer#isUniqueInGlobals(String, Iterable)
+     *
      */
     private static boolean isUniqueInGlobals(String name, Iterable<IProgramVariable> globals) {
         for (final IProgramVariable n : globals) {
@@ -1696,74 +1698,56 @@ public class MergeRuleUtils {
     }
 
     /**
-     *
      * TODO
      *
      * @author Dominic Scheurer
      */
-    private static class CommonAndSpecificSubformulasResult {
-        public final LinkedHashSet<Term> specific1, specific2, common;
-
-        public CommonAndSpecificSubformulasResult(LinkedHashSet<Term> specific1,
-                LinkedHashSet<Term> specific2, LinkedHashSet<Term> common) {
-            this.specific1 = specific1;
-            this.specific2 = specific2;
-            this.common = common;
-        }
+    private record CommonAndSpecificSubformulasResult(LinkedHashSet<Term> specific1,
+            LinkedHashSet<Term> specific2,
+            LinkedHashSet<Term> common) {
     }
 
     /**
-     * Simple term wrapper for comparing terms modulo renaming.
-     *
-     * @author Dominic Scheurer
-     * @see TermWrapperFactory
-     */
-    static class TermWrapper {
-        private final Term term;
-        private final int hashcode;
-
-        public TermWrapper(Term term, int hashcode) {
-            this.term = term;
-            this.hashcode = hashcode;
-        }
-
-        public Term getTerm() {
-            return term;
-        }
-
-        @Override
-        public boolean equals(Object obj) {
-            return obj instanceof TermWrapper
-                    && term.equalsModRenaming(((TermWrapper) obj).getTerm());
-        }
-
-        @Override
-        public int hashCode() {
-            return hashcode;
-        }
-
-        @Override
-        public String toString() {
-            return term.toString();
-        }
-
-        /**
-         * Adds the wrapped content of the Iterable object into the given target collection.
+         * Simple term wrapper for comparing terms modulo renaming.
          *
-         * @param target The collection to insert the wrapped terms into.
-         * @param wrappedCollection Iterable to transform.
-         * @return The target collection with inserted terms.
+         * @author Dominic Scheurer
+         * @see TermWrapperFactory
          */
-        public static <T extends Collection<Term>> T toTermList(T target,
-                Iterable<TermWrapper> wrappedCollection) {
+        record TermWrapper(Term term, int hashcode) {
 
-            for (TermWrapper termWrapper : wrappedCollection) {
-                target.add(termWrapper.getTerm());
+        @Override
+            public boolean equals(Object obj) {
+                return obj instanceof TermWrapper
+                        && term.equalsModRenaming(((TermWrapper) obj).term());
             }
 
-            return target;
+            @Override
+            public int hashCode() {
+                return hashcode;
+            }
+
+            @Override
+            public String toString() {
+                return term.toString();
+            }
+
+            /**
+             * Adds the wrapped content of the Iterable object into the given target collection.
+             *
+             * @param target            The collection to insert the wrapped terms into.
+             * @param wrappedCollection Iterable to transform.
+             * @return The target collection with inserted terms.
+             */
+            public static <T extends Collection<Term>> T toTermList(T target,
+                                                                    Iterable<TermWrapper> wrappedCollection) {
+
+                for (TermWrapper termWrapper : wrappedCollection) {
+                    target.add(termWrapper.term());
+                }
+
+                return target;
+            }
         }
-    }
 
     /**
      * Visitor for collecting program locations in a Java block.
@@ -1832,7 +1816,7 @@ public class MergeRuleUtils {
     /**
      * Map for renaming variables to their branch-unique names. Putting things into this map has
      * absolutely no effect; the get method just relies on the
-     * {@link LocationVariable#getBranchUniqueName()} method of the respective location variable.
+     * {@link #getBranchUniqueLocVar} method.
      * Therefore, this map is also a singleton object.
      *
      * @author Dominic Scheurer
@@ -1868,8 +1852,7 @@ public class MergeRuleUtils {
 
         @Override
         public ProgramVariable get(Object key) {
-            if (key instanceof LocationVariable) {
-                LocationVariable var = (LocationVariable) key;
+            if (key instanceof LocationVariable var) {
 
                 if (doNotRename.contains(var)) {
                     return var;
